// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdeEmptyState renders when no props are defined 1`] = `
[
  <IdeEmptyState
    body={null}
    button={null}
    format="lg"
    image="default"
    links={null}
    title="CHANGE ME"
  />,
]
`;

exports[`IdeEmptyState renders when the body prop is defined as a string 1`] = `
[
  <IdeEmptyState
    body="Custom body"
    button={null}
    format="lg"
    image="default"
    links={null}
    title="CHANGE ME"
  />,
]
`;

exports[`IdeEmptyState renders when the button prop is defined as a function 1`] = `
[
  <IdeEmptyState
    body={null}
    button={[Function]}
    format="lg"
    image="default"
    links={null}
    title="CHANGE ME"
  />,
]
`;

exports[`IdeEmptyState renders when the button prop is defined as an object 1`] = `
[
  <IdeEmptyState
    body={null}
    button={
      {
        "kind": "primary",
        "onClick": [Function],
        "text": "Custom text",
      }
    }
    format="lg"
    image="default"
    links={null}
    title="CHANGE ME"
  />,
]
`;

exports[`IdeEmptyState renders when the format prop is defined as lg 1`] = `
[
  <IdeEmptyState
    body={null}
    button={null}
    format="lg"
    image="default"
    links={null}
    title="CHANGE ME"
  />,
]
`;

exports[`IdeEmptyState renders when the format prop is defined as sm 1`] = `
[
  <IdeEmptyState
    body={null}
    button={null}
    format="sm"
    image="default"
    links={null}
    title="CHANGE ME"
  />,
]
`;

exports[`IdeEmptyState renders when the image prop is defined as a function that returns an image 1`] = `
[
  <IdeEmptyState
    body={null}
    button={null}
    format="lg"
    image={[Function]}
    links={null}
    title="CHANGE ME"
  />,
]
`;

exports[`IdeEmptyState renders when the image prop is defined as an object 1`] = `
[
  <IdeEmptyState
    body={null}
    button={null}
    format="lg"
    image={
      {
        "alt": "Custom alt",
        "className": "custom-classname",
        "src": "custom.lg.svg",
      }
    }
    links={null}
    title="CHANGE ME"
  />,
]
`;

exports[`IdeEmptyState renders when the image prop is defined as apiError 1`] = `
[
  <IdeEmptyState
    body={null}
    button={null}
    format="lg"
    image="apiError"
    links={null}
    title="CHANGE ME"
  />,
]
`;

exports[`IdeEmptyState renders when the image prop is defined as default 1`] = `
[
  <IdeEmptyState
    body={null}
    button={null}
    format="lg"
    image="default"
    links={null}
    title="CHANGE ME"
  />,
]
`;

exports[`IdeEmptyState renders when the image prop is defined as deploy 1`] = `
[
  <IdeEmptyState
    body={null}
    button={null}
    format="lg"
    image="deploy"
    links={null}
    title="CHANGE ME"
  />,
]
`;

exports[`IdeEmptyState renders when the image prop is defined as noSearchResults 1`] = `
[
  <IdeEmptyState
    body={null}
    button={null}
    format="lg"
    image="noSearchResults"
    links={null}
    title="CHANGE ME"
  />,
]
`;

exports[`IdeEmptyState renders when the image prop is defined as notAuthorized 1`] = `
[
  <IdeEmptyState
    body={null}
    button={null}
    format="lg"
    image="notAuthorized"
    links={null}
    title="CHANGE ME"
  />,
]
`;

exports[`IdeEmptyState renders when the links prop is defined as an array of objects 1`] = `
[
  <IdeEmptyState
    body={null}
    button={null}
    format="lg"
    image="default"
    links={
      [
        {
          "text": "Custom link 1",
          "url": "http://ibm.com",
        },
        {
          "target": "_blank",
          "text": "Custom external link 2",
          "url": "http://ibm.com",
        },
      ]
    }
    title="CHANGE ME"
  />,
]
`;

exports[`IdeEmptyState renders when the links prop is defined as an object 1`] = `
[
  <IdeEmptyState
    body={null}
    button={null}
    format="lg"
    image="default"
    links={
      {
        "text": "Custom link",
        "url": "http://ibm.com",
      }
    }
    title="CHANGE ME"
  />,
]
`;

exports[`IdeEmptyState renders when the links prop is defined as an object 2`] = `
[
  <IdeEmptyState
    body={null}
    button={null}
    format="lg"
    image="default"
    links={
      [
        {
          "onClick": [Function],
          "text": "Custom link 1",
          "url": "#",
        },
      ]
    }
    title="CHANGE ME"
  />,
]
`;

exports[`IdeEmptyState renders when the title prop is defined as a string 1`] = `
[
  <IdeEmptyState
    body={null}
    button={null}
    format="lg"
    image="default"
    links={null}
    title="Custom title"
  />,
]
`;
